@@ -20,11 +20,18 @@
 ##' @keywords manip
 ##' @examples
 ##'
-##' 	data(gcSample)
-##' 	xx <- compareCluster(gcSample, fun="enrichKEGG", organism="human", pvalueCutoff=0.05)
-##' 	#summary(xx)
-##' 	#plot(xx, type="dot", caption="KEGG Enrichment Comparison")
+##' data(gcSample)
+##' xx <- compareCluster(gcSample, fun="enrichKEGG",
+##'                      organism="human", pvalueCutoff=0.05)
+##' summary(xx)
+##' # plot(xx, type="dot", caption="KEGG Enrichment Comparison")
 ##'
+##' ## formula interface
+##' mydf <- data.frame(Entrez=c('1', '100', '1000', '100101467',
+##'                             '100127206', '100128071'),
+##'                    group = c('A', 'A', 'A', 'B', 'B', 'B'))
+##' xx.formula <- compareCluster(Entrez~group, data=mydf, fun='groupGO')
+##' summary(xx.formula)
 compareCluster <- function(geneClusters, fun="enrichGO", data='', ...) {
 
     fun <- eval(parse(text=fun))
